merge `LiteralValueComparisonProcessor` and `ResourceValueComparisonProcessor` into `PropertyComparisonProcessor`